--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
               "node_modules/primeng/resources/themes/saga-blue/theme.css",
               "node_modules/primeicons/primeicons.css"
             ],
-            "scripts": [["node_modules/gsap/src/uncompressed/TweenMax.js"]]
+            "scripts": []
           },
           "configurations": {
             "production": {
