--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
     "bulma": "^0.9.2",
+    "chart.js": "^3.3.2",
     "gsap": "^3.6.1",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.0",
