--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.6",
-    "@angular/cdk": "^11.2.10",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~10.0.6",
     "@angular/compiler": "~10.0.6",
     "@angular/core": "~10.0.6",
@@ -24,6 +24,8 @@
     "bulma": "^0.9.2",
     "chart.js": "^3.3.2",
     "gsap": "^3.6.1",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^5.1.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.0",
     "rxjs": "~6.5.5",
