--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bulma": "^0.9.2",
     "chart.js": "^3.3.2",
     "gsap": "^3.6.1",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.3.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.1.0",
     "primeicons": "^4.1.0",
