--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "@kolkov/angular-editor": "^1.1.7",
     "bulma": "^0.9.2",
     "chart.js": "^3.3.2",
     "gsap": "^3.6.1",
+    "html-to-text": "^8.0.0",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.1.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.0",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
