--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "html-to-text": "^8.0.0",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
+    "ng2-pdf-viewer": "^7.0.1",
     "ng2-search-filter": "^0.5.1",
+    "ngx-image-compress": "^11.0.3",
     "ngx-pagination": "^5.1.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.0",
