--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~10.0.6",
     "@angular/compiler": "~10.0.6",
     "@angular/core": "~10.0.6",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~10.0.6",
     "@angular/localize": "~10.0.6",
     "@angular/platform-browser": "~10.0.6",
@@ -24,6 +25,7 @@
     "@kolkov/angular-editor": "^1.1.7",
     "bulma": "^0.9.2",
     "chart.js": "^3.3.2",
+    "firebase": "^8.6.7",
     "gsap": "^3.6.1",
     "html-to-text": "^8.0.0",
     "html2canvas": "^1.0.0-rc.7",
